# src/models/user.ts
@@ -1,7 +1,24 @@
+import * as sequelize from 'sequelize';
+import * as Database from '../database';
+
 export interface User {
-    id: number;
-    email: string;
-    name: string;
-    status?: "Happy" | "Sad";
-    phoneNumbers: string[];
+  id: number;
+  email: string;
+  name: string;
+  status?: 'Happy' | 'Sad';
 }
+
+export const RetrieveUser = async (filter: Partial<sequelize.WhereOptions<User>>): Promise<User[]> => {
+  try {
+    const where: any = {
+      deletedAt: null,
+      ...filter,
+    };
+
+    const rows = await Database.Users.findAll({ where });
+
+    return rows as any;
+  } catch (error) {
+    throw new Error('DB error ' + error);
+  }
+};
